debian/k3s cluster/test/fibi/deploy.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: ssl-front
  namespace: fibi
  labels:
    type: local
spec:
  storageClassName: manual
  capacity:
    storage: 1Gi
  accessModes:
    - ReadWriteOnce
  hostPath:
    path: "/etc/ssl/private"
    type: DirectoryOrCreate
---
apiVersion: v1
kind: PersistentVolume
metadata:
  name: ssl-api
  namespace: fibi
  labels:
    type: local
spec:
  storageClassName: manual
  capacity:
    storage: 1Gi
  accessModes:
    - ReadWriteOnce
  hostPath:
    path: "/etc/ssl/private"
    type: DirectoryOrCreate
---
apiVersion: v1
kind: PersistentVolume
metadata:
  name: tz
  namespace: fibi
  labels:
    type: local
spec:
  storageClassName: manual
  capacity:
    storage: 1Gi
  accessModes:
    - ReadWriteOnce
  hostPath:
    path: "/etc/timezone"
    type: FileOrCreate
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: ssl-front
spec:
  storageClassName: manual
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: ssl-api
spec:
  storageClassName: manual
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: tz
spec:
  storageClassName: manual
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: fibi
spec:
  selector:
    app: fibi
  ports:
    - port: 80
      targetPort: 443
      nodePort: 30000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fibi
  template:
    metadata:
      labels:
        app: fibi
    spec:
      volumes:
      - name: ssl-front
        persistentVolumeClaim:
          claimName: ssl-front
      - name: tz
        persistentVolumeClaim:
          claimName: tz
      - name: ssl-api
        persistentVolumeClaim:
          claimName: ssl-api
      containers:
        - name: fibi-front
          image: registry.osupytheas.fr:443/fibi-front:latest
          ports:
            - containerPort: 443
          env:
            - name: TZ
              value: Europe/Paris
          volumeMounts:
            - mountPath: /etc/ssl/private
              name: ssl-front
              readOnly: false
            - mountPath: /etc/timezone
              name: tz
              readOnly: true
          imagePullPolicy: Always
        - name: fibi-api
          image: registry.osupytheas.fr:443/fibi-api:latest
          ports:
            - containerPort: 8082
          env:
            - name: TZ
              value: Europe/Paris
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /etc/ssl/private
              name: ssl-api
              readOnly: false
            - mountPath: /etc/timezone
              name: tz
              readOnly: true
    #  volumes:
    #    - name: ssl
    #      hostPath:
    #        # chemin du dossier sur l'hôte
    #        path: /etc/ssl/private
    #        # ce champ est optionnel
    #        type: Directory
    #    - name: tz
    #      hostPath:
    #        # chemin du dossier sur l'hôte
    #        path: /etc/timezone
    #        # ce champ est optionnel
    #        type: File
