debian/k3s cluster/test/fibi/internal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibi-internal
  namespace: fibi
spec:
  selector:
    app: fibi
  ports:
  - port:  443
    targetPort: 443
